--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,4 +6,5 @@ set(mpdknotifier_SRCS src/main.cpp src/notifier.cpp)
 kde4_add_executable(mpdknotifier ${mpdknotifier_SRCS})
 target_link_libraries(mpdknotifier ${KDE4_KDEUI_LIBS})
 install(FILES mpdknotifier.notifyrc DESTINATION ${DATA_INSTALL_DIR}/mpdknotifier)
+install(FILES nocover.jpg DESTINATION ${DATA_INSTALL_DIR}/mpdknotifier)
 install(TARGETS mpdknotifier ${INSTALL_TARGETS_DEFAULT_ARGS})
