Add QtNetwork library dependency to CMakeLists.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ include(KDE4Defaults)
 include_directories(${KDE4_INCLUDES})
 set(mpdknotifier_SRCS src/main.cpp src/notifier.cpp)
 kde4_add_executable(mpdknotifier ${mpdknotifier_SRCS})
-target_link_libraries(mpdknotifier ${KDE4_KDEUI_LIBS})
+target_link_libraries(mpdknotifier ${KDE4_KDEUI_LIBS} ${QT_QTNETWORK_LIBRARY})
 install(FILES mpdknotifier.notifyrc DESTINATION ${DATA_INSTALL_DIR}/mpdknotifier)
 install(FILES nocover.jpg DESTINATION ${DATA_INSTALL_DIR}/mpdknotifier)
 install(TARGETS mpdknotifier ${INSTALL_TARGETS_DEFAULT_ARGS})
